--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
       return(
         <div className='card'>
         <div className='card-title'>
-        <p className='title'>{this.props.task}</p>
-        <p className='subtitle'>{this.props.added}</p>
+        <p className='subtitle'>{this.props.task}{this.props.added}</p>
         </div>
         </div>
       )
@@ -98,7 +97,7 @@
           </form>
           <div>
             {this.state.tasks.map(item => 
-              <ToDoItem task={item.text} added={item.key}/>
+              <ToDoItem key={item.key} task={item.text} added={item.key}/>
             )}  
           </div>
         </div>
