--- a/index.html
+++ b/index.html
@@ -14,21 +14,30 @@
 
 <style>
     html, body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 100px;
-        background-color: #66ccff
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 100px;
+      background-color: #66ccff
     }
     .input {
-        width: 500px;
+      width: 500px;
     }
     .button {
-        margin-left: 11px;
+      margin-left: 11px;
     }
     .card {
+      background-color: #82cdff;
       margin: 5px;
       padding: 5px;
+      border: blue 1px solid;
+      color: black;
+      max-width: 490px;
+    }
+    .card-title {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
     }
 </style>
 
@@ -44,9 +53,11 @@
     render() {
       return(
         <div className='card'>
-        <div className='card-title'>
-        <p className='subtitle'>{this.props.task}{this.props.added}</p>
-        </div>
+          <div className='card-title'>
+            <input type='checkbox' />
+            <p className='subtitle'>{this.props.task}</p>
+            <a className='delete' onClick={this.props.singleDelete}/>
+          </div>
         </div>
       )
     }
@@ -58,25 +69,24 @@
 
       this.state = {
         tasks: [],
-        entry: ""
+        entry: "",
       }
       this.addItem = this.addItem.bind(this);
       this.updateEntry = this.updateEntry.bind(this);
+      this.singleDelete = this.singleDelete.bind(this);
     }
 
     addItem(event) {
       let taskArray = this.state.tasks;
 
-      taskArray.push( {
+      taskArray.push({
         text: this.state.entry,
         key: Date.now()
       })
 
       this.setState({
         tasks: taskArray,
-        entry: ""
-        // tasks: [...this.state.tasks, this.state.entry],
-        // entry: ""
+        entry: "",
       });
       console.log(this.state.tasks);
       event.preventDefault()
@@ -88,16 +98,27 @@
       });
     }
 
+    singleDelete(item) {
+      let taskArray = this.state.tasks;
+
+      taskArray.splice(item, 1);
+
+      this.setState({
+        tasks: taskArray
+      })
+      console.log(this.state.tasks);
+    }
+
     render() {
       return (
-        <div>
+        <div className='todoList'>
           <form onSubmit={this.addItem}>
           <input type="text" className="input is-info" placeholder="Enter task..." value={this.state.entry} onChange={this.updateEntry}/>
           <button type="submit" className="button is-info" onClick={this.addItem}>Add</button>
           </form>
           <div>
             {this.state.tasks.map(item => 
-              <ToDoItem key={item.key} task={item.text} added={item.key}/>
+              <ToDoItem key={item.key} task={item.text} added={item.key} onClick={this.singleDelete}/>
             )}  
           </div>
         </div>
@@ -110,6 +131,6 @@
     home
   );
 
-    </script>
+  </script>
 </body>
 </html>
