--- a/index.html
+++ b/index.html
@@ -47,89 +47,97 @@
   <div id='app'></div>
 
   <script type="text/babel">
-  const home = document.querySelector('#app');
-
-  class ToDoItem extends React.Component {
-    render() {
-      return(
-        <div className='card'>
-          <div className='card-title'>
-            <input type='checkbox' />
-            <p className='subtitle'>{this.props.task}</p>
-            <a className='delete' onClick={this.props.singleDelete}/>
-          </div>
+  const home = document.querySelector("#app");
+class ToDoItem extends React.Component {
+  handleDelete = () => {
+    const { singleDelete, key, item } = this.props;
+    singleDelete(key, item);
+  };
+  render() {
+    return (
+      <div className="card">
+        <div className="card-title">
+          <input type="checkbox" />
+          <p className="subtitle">{this.props.task}</p>
+          <a className="delete" onClick={this.handleDelete} />
         </div>
-      )
-    }
+      </div>
+    );
   }
-
-  class ToDoList extends React.Component {
-    constructor(props) {
-      super(props)
-
-      this.state = {
-        tasks: [],
-        entry: "",
-      }
-      this.addItem = this.addItem.bind(this);
-      this.updateEntry = this.updateEntry.bind(this);
-      this.singleDelete = this.singleDelete.bind(this);
-    }
-
-    addItem(event) {
-      let taskArray = this.state.tasks;
-
-      taskArray.push({
-        text: this.state.entry,
-        key: Date.now()
-      })
-
-      this.setState({
-        tasks: taskArray,
-        entry: "",
-      });
-      console.log(this.state.tasks);
-      event.preventDefault()
-    }
-
-    updateEntry(event) {
-      this.setState({
-        entry: event.target.value
-      });
-    }
-
-    singleDelete(item) {
-      let taskArray = this.state.tasks;
-
-      taskArray.splice(item, 1);
-
-      this.setState({
-        tasks: taskArray
-      })
-      console.log(this.state.tasks);
-    }
-
-    render() {
-      return (
-        <div className='todoList'>
-          <form onSubmit={this.addItem}>
-          <input type="text" className="input is-info" placeholder="Enter task..." value={this.state.entry} onChange={this.updateEntry}/>
-          <button type="submit" className="button is-info" onClick={this.addItem}>Add</button>
-          </form>
-          <div>
-            {this.state.tasks.map(item => 
-              <ToDoItem key={item.key} task={item.text} added={item.key} onClick={this.singleDelete}/>
-            )}  
-          </div>
+};
+class ToDoList extends React.Component {
+  constructor(props) {
+    super(props);
+    this.state = {
+      tasks: [],
+      entry: ""
+    };
+    this.addItem = this.addItem.bind(this);
+    this.updateEntry = this.updateEntry.bind(this);
+    this.singleDelete = this.singleDelete.bind(this);
+  }
+  addItem(event) {
+    let taskArray = this.state.tasks;
+    taskArray.push({
+      text: this.state.entry,
+      key: Date.now()
+    });
+    this.setState({
+      tasks: taskArray,
+      entry: ""
+    });
+    console.log(this.state.tasks);
+    event.preventDefault();
+  };
+  updateEntry(event) {
+    this.setState({
+      entry: event.target.value
+    });
+  };
+  singleDelete(index, item) {
+    this.state.tasks.splice(index, 1);
+    this.setState({
+      tasks: this.state.tasks
+    });
+    console.log(this.state.tasks);
+  };
+  render() {
+    return (
+      <div className="todoList">
+        <form onSubmit={this.addItem}>
+          <input
+            type="text"
+            className="input is-info"
+            placeholder="Enter task..."
+            value={this.state.entry}
+            onChange={this.updateEntry}
+          />
+          <button
+            type="submit"
+            className="button is-info"
+            onClick={this.addItem}
+          >
+            Add
+          </button>
+        </form>
+        <div>
+          {this.state.tasks.map(item =>
+            <ToDoItem
+              item={item}
+              key={item.key}
+              task={item.text}
+              added={item.key}
+              singleDelete={this.singleDelete}
+            />
+          )}
         </div>
-      )
-    }
+      </div>
+    );
   }
-        
-  ReactDOM.render(
-    <ToDoList />,
-    home
-  );
+}
+
+ReactDOM.render(<ToDoList />, home);
+
 
   </script>
 </body>
