Forgot to bind...
...the bigDelete function. Good times. Now the problem is that it's deleting all items on the list. All items have the same "completed" state. Need to lower it?

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@ class ToDoList extends React.Component {
     this.updateEntry = this.updateEntry.bind(this);
     this.singleDelete = this.singleDelete.bind(this);
     this.markItDone = this.markItDone.bind(this);
+    this.bigDelete = this.bigDelete.bind(this);
   }
   addItem(event) {
     let taskArray = this.state.tasks;
