--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@ html {
 <h1 class='title'>To Do List</h1>
 <div id='app'></div>
 
-<script type="text/babel">
-const home = document.querySelector("#app");
+<script type="text/babel">const home = document.querySelector("#app");
 class ToDoItem extends React.Component {
   constructor(props) {
     super(props);
@@ -74,10 +73,11 @@ class ToDoItem extends React.Component {
     singleDelete(index);
   }
   itsDone() {
+    const { updateCompleteList, item } = this.props;
     this.setState(prevState => ({
       complete: !prevState.complete
     }));
-    this.props.updateCompleteList(this.props.item);
+    updateCompleteList(item.key);
     //Callback to re-render item or whole list which passes the new doneStatus, based on state in this component, which can then be filtered to remove checked items?
   }
   render() {
@@ -165,18 +165,23 @@ class ToDoList extends React.Component {
       tasks: filteredTasks
     });
   }
-  //TODO: Need better function to check if item already present. Add if not, delete if so.
   updateCompleteList(item) {
-    this.state.doneTasks.push(item);
+    let updatedDoneTasks = this.state.doneTasks;
+    if (updatedDoneTasks.indexOf(item) === -1) {
+      updatedDoneTasks.push(item);
+    } else {
+      updatedDoneTasks = updatedDoneTasks.filter(task => task !== item);
+    }
     this.setState({
-      doneTasks: this.state.doneTasks
-    })
-    console.log(item.key);
+      doneTasks: updatedDoneTasks
+    });
   }
   render() {
     return (
       <div className="todoList">
-        <p className="task-counter">Completed tasks: {this.state.doneTasks.length}</p>
+        <p className="task-counter">
+          Completed tasks: {this.state.doneTasks.length}
+        </p>
         <form onSubmit={this.addItem}>
           <input
             type="text"
@@ -195,7 +200,7 @@ class ToDoList extends React.Component {
         </form>
         <DeleteButton bigDelete={this.bigDelete} />
         <div>
-          {this.state.tasks.map((item, index) =>
+          {this.state.tasks.map((item, index) => (
             <ToDoItem
               item={item}
               index={index}
@@ -205,7 +210,7 @@ class ToDoList extends React.Component {
               singleDelete={this.singleDelete}
               updateCompleteList={this.updateCompleteList}
             />
-          )}
+          ))}
         </div>
       </div>
     );
