--- a/index.html
+++ b/index.html
@@ -95,27 +95,12 @@ class ToDoItem extends React.Component {
     );
   }
 }
-class DeleteButton extends React.Component {
-  constructor(props) {
-    super(props);
-    this.multiDelete = this.multiDelete.bind(this);
-  }
-  multiDelete() {
-    const { bigDelete } = this.props;
-    bigDelete();
-  }
-  render() {
-    return (
-      <button
-        type="submit"
-        className="button is-danger"
-        onClick={this.multiDelete}
-      >
-        Delete
-      </button>
-    );
-  }
-}
+const DeleteButton = ({ bigDelete }) => (
+  <button type="submit" className="button is-danger" onClick={bigDelete}>
+    Delete
+  </button>
+);
+
 class ToDoList extends React.Component {
   constructor(props) {
     super(props);
@@ -158,12 +143,15 @@ class ToDoList extends React.Component {
       if (task.doneStatus === false) {
         return task;
       }
-    }
+    };
     const scrubbedArray = doneTasksArray.filter(scrubber);
-    this.setState({
-      tasks: this.state.tasks,
-      doneTasks: scrubbedArray
-    }, console.log(scrubbedArray));
+    this.setState(
+      {
+        tasks: this.state.tasks,
+        doneTasks: scrubbedArray
+      },
+      console.log(scrubbedArray)
+    );
   }
   bigDelete() {
     const { tasks, doneTasks } = this.state;
@@ -174,10 +162,13 @@ class ToDoList extends React.Component {
       }
     };
     const scrubbedArray = allTasks.filter(scrubber);
-    this.setState({
-      tasks: scrubbedArray,
-      doneTasks: []
-    }, console.log(this.state.doneTasks));
+    this.setState(
+      {
+        tasks: scrubbedArray,
+        doneTasks: []
+      },
+      console.log(this.state.doneTasks)
+    );
   }
   updateCompleteList(item) {
     let updatedDoneTasks = this.state.doneTasks;
@@ -186,9 +177,12 @@ class ToDoList extends React.Component {
     } else {
       updatedDoneTasks = updatedDoneTasks.filter(task => task !== item);
     }
-    this.setState({
-      doneTasks: updatedDoneTasks
-    }, console.log(updatedDoneTasks));
+    this.setState(
+      {
+        doneTasks: updatedDoneTasks
+      },
+      console.log(updatedDoneTasks)
+    );
   }
   render() {
     return (
